# pams

./: LICENSE  main.py  pyproject.toml  readme.md  setup.py
.github/workflows/: python-publish.yml
