[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyamsys"
version = "0.1.0"
description = "Python Application Management System (PyAMSys)"
authors = [
    { name = "Gubir34" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }

dependencies = [
    "gitpython",
    "requests"
]

[project.scripts]
pyappms = "pyamsys.cli:main"
